tests/syntactic/sourceloc1/sourceloc1.err
Error: syntax error, unexpected . in file sourceloc1.dl at line 1
.bad
^----
1 errors generated, evaluation aborted
